c/src/test/resources/c/test/nec_bnc/invalid/ex30.ctrl
<controlFile>
  <sourceFile name="../ex30.c" id="1" />
  <run>
    <startPosition fileId="1" line="23" />
    <wayPoint fileId="1" line="29" >
      <command>
	<cascadeFunction>cascade_assume</cascadeFunction>
	<argument><![CDATA[
	n < 100 && n > 0
	]]>
	</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="33" >
      <function funcName="foo" >
	<wayPoint fileId="1" line="16" >
	  <command>
	    <cascadeFunction>cascade_check</cascadeFunction>
	    <argument><![CDATA[
	    valid_malloc(y)
	    ]]>
	    </argument>
	  </command>
	</wayPoint>
	<wayPoint fileId="1" line="17" >
	  <loop iterTimes="100" >
	    <wayPoint fileId="1" line="18" >
	      <command>
		<cascadeFunction>cascade_check</cascadeFunction>
		<argument><![CDATA[
		valid(&y[i])
		]]>
		</argument>
	      </command>
	    </wayPoint>
	  </loop>
	</wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="37" >
      <function funcName="bar" >
	<wayPoint fileId="1" line="8" >
	  <command>
	    <cascadeFunction>cascade_check</cascadeFunction>
	    <argument><![CDATA[
	    valid_malloc(w)
	    ]]>
	    </argument>
	  </command>
	</wayPoint>
	<wayPoint fileId="1" line="9" >
	  <loop iterTimes="100" >
	    <wayPoint fileId="1" line="10" >
	      <command>
		<cascadeFunction>cascade_check</cascadeFunction>
		<argument><![CDATA[
		valid(&(w[i].a)) && valid(&(w[i].b))
		]]>
		</argument>
	      </command>
	    </wayPoint>
	  </loop>
	</wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="39" />
  </run>
</controlFile>
